syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tedcadet.donneeslaval.contrats";

service ContratService {
  rpc ListeContractants(ListeContractantsRequest) returns (stream ListeContractantsReply) {}
  rpc MontantCumulatifParContractants(MontantCumulatifParContractantsRequest) returns (stream MontantCumulatifParContractantsReply) {}
  rpc MontantDepenseParAnnee(MontantDepenseParAnneeRequest) returns (stream MontantDepenseParAnneeReply) {}
}

message ListeContractantsRequest {

}

message ListeContractantsReply {
  string contractant = 1;
}

message MontantCumulatifParContractantsRequest {

}

message MontantCumulatifParContractantsReply {
  string contractant = 1;
  string montantCumulatifParConsultant = 2;
}

message MontantDepenseParAnneeRequest {

}

message MontantDepenseParAnneeReply {
  string annee = 1;
  string montantCumulatifParAnnee = 2;
}